--- a/README
+++ b/README
@@ -10,6 +10,8 @@ This repository is dedicated to hosting content related to our family puja proce
 
 Here, you will find detailed instructions, rituals, and guidelines for performing various pujas. We hope this will help preserve our traditions and ensure that everyone can participate in these important ceremonies.
 
+Content is currently hosted at [here](https://vthinkhat.github.io/puja-vidhi/)
+
 ## Testing using http-server
 
 Here are the commands to install and run http-server locally:
