--- a/README
+++ b/README
@@ -6,6 +6,10 @@ Welcome to the Puja Vidhi repository!
 
 This repository is dedicated to hosting content related to our family puja procedures. Our goal is to make these procedures easily accessible to everyone in the family, regardless of their location, as long as they have access to the internet.
 
+## Prime sources of info
+
+- [Mindset of performing puja](https://youtu.be/EL-efLozsP8?si=JaJcci6iDwh7_ltg)
+
 ## Content
 
 Here, you will find detailed instructions, rituals, and guidelines for performing various pujas. We hope this will help preserve our traditions and ensure that everyone can participate in these important ceremonies.
