--- a/README
+++ b/README
@@ -41,4 +41,11 @@ For any questions or support, please reach out to the repository maintainers.
 
 ---
 
+# AI tips
+
+- Ask ChatGPT to generate: romanized phonetic recitation guide
+- Use ChatGPT and Perplexity AI.
+
+Break down to the smallest words possible, given meaning of each word and give meaning of each line put together. Give words in Kannada text and romanized phonetic recitation guide:
+
 *Note: This repository is intended for private family use only.*
