--- a/README
+++ b/README
@@ -28,3 +28,9 @@ Contributions are welcome.
 ## AI Tips
 
 Use tools like ChatGPT and Perplexity AI for assistance.
+
+## Tools
+
+Use https://www.aksharamukha.com/converter to convert images/text to Kannada
+
+Use `Sanskrit transliteration using Double-Vowel Notation` always
