--- a/README
+++ b/README
@@ -19,18 +19,27 @@ npm install -g http-server -y
 http-server
 ```
 
-Open the provided URL (e.g., http://127.0.0.1:8080) in your browser.
-
-## Contributions
-
-Contributions are welcome.
-
-## AI Tips
-
-Use tools like ChatGPT and Perplexity AI for assistance.
+Open this URL [127.0.0.1](http://127.0.0.1:8080) in your browser.
 
 ## Tools
 
-Use https://www.aksharamukha.com/converter to convert images/text to Kannada
+LLMs used: [ChatGPT](https://chatgpt.com)  and [Perplexity AI](https://www.perplexity.ai)
 
-Use `Sanskrit transliteration using Double-Vowel Notation` always
+Use these to read images or text and convert to kannada:
+
+* [Akshara Mukha Converter](https://www.aksharamukha.com/converter)
+
+* [i2OCR](https://www.i2ocr.com/free-online-telugu-ocr)
+
+For writing kannada text:
+
+* [Akshara Mukha Kannada Input](https://www.aksharamukha.com/input/Kannada) (with svara)
+    - use `\_` for anudatta e.g. `ಚಂ॒ದ್ರಾಂ॒`
+    - `\'` for swarita e.g. `ಹರಿ॑ಣೀಂ`
+    - `\"` for deerga-swarita e.g. `ಮಿನೀ᳚ಮ್`
+    - normal kannada text is udatta e.g. `ಶ್ರಿಯಮ್`
+
+* [Lexi Logos Kannada Keyboard](https://www.lexilogos.com/keyboard/kannada.htm)
+
+* [Google Translate](https://www.google.com/search?q=kannada+to+english)
+
